--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                                     Made with 
                                     <i class="fa fa-heart"></i>
                                     by 
-                                    <a target="_blank" href="https://prathamchande.github.io/">PRATHAMESH CHANDE</a> 
+                                    <a target="_blank" href="https://prathamchande.github.io/">PRATHAMESH P CHANDE</a> 
                                     2023. 
                                 </p>
                             </div>
